# ML-Chatbot-Response-Classifier

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: dashboard.html
notebooks/: README.md  notebook.ipynb
src/: main.py
src/japeto_classifier/: __main__.py  api.py  cli.py  config.py  constants.py  data.py  embeddings.py  registry.py  splitting.py  text.py  training.py
