[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "japeto-classifier"
version = "1.0.0"
description = "Reproducible chatbot-response classification and local analytics dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "joblib>=1.4,<2",
  "numpy>=1.26,<3",
  "openai>=1.60,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<4",
  "pyarrow>=16,<25",
  "python-dotenv>=1.0,<2",
  "scikit-learn>=1.5,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[project.scripts]
japeto-classifier = "japeto_classifier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
